# slurm-ldap-inegration-charms

./: .gitignore  README.md  bundle.yaml  clouds.yaml  docker-compose-php.yml  docker-compose.yml  justfile  my.yaml  pyproject.toml  repository.py
charms/jupyterhub/: README.md  charmcraft.yaml  pyproject.toml
charms/jupyterhub/src/: charm.py  exceptions.py  jupyterhub.py  nfs.py  tailscale.py
charms/jupyterhub/templates/: jupyterhub.service  jupyterhub_config.py
charms/nfs-home/: .gitignore  README.md  charmcraft.yaml  pyproject.toml
charms/nfs-home/extras/: bundle.yaml
charms/nfs-home/src/: charm.py  nfs.py
charms/openldap/: README.md  charmcraft.yaml  pyproject.toml
charms/openldap/notes/: sssd.conf
charms/openldap/src/: charm.py  exceptions.py  openldap.py
charms/openldap/templates/: add-automount-home-map-entries.ldif  add-organizational-units.ldif  add-slurm-users-group.ldif  add-sssd-binder.ldif  add-user.ldif  autofs-schema.ldif  openssh-lpk-schema.ldif  slapd.default  update-permissions.ldif  update-tls-config.ldif
charms/sssd/: .gitignore  README.md  charmcraft.yaml  pyproject.toml  tox.ini
charms/sssd/notes/: id_rsa_ldap  nsswitch.conf
charms/sssd/src/: charm.py  sssd_manager.py
charms/sssd/templates/: sssd-autofs.conf  sssd.conf
extra/keycloak/: realm-next-export.json
extra/keycloak-org-listener/: pom.xml
extra/keycloak-user-listener/: pom.xml
extra/keycloak-user-org-federation-listener/: pom.xml
extra/keycloak/realms/: realm-next-export.json
extra/providers/keycloak-user-storage-spi/: pom.xml
(+13 files in other folders)
